# laba5-aliisakas

./: CMakeLists.txt  README.md  counter.cpp  main.cpp
include/: blur.h
src/: blur.cpp
